# chill-bot

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  alembic.ini  app.py  config.py  database.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 9daffa5f218f_add_is_payed_field.py  9edbb443a575_add_updated_at_field.py  b114bf9a52d7_initial_migration.py
backend/app/api/v1/: core.py
backend/app/core/domain/: models.py
backend/app/core/protocols/: storage.py
backend/app/dependecies/: dependencies.py
backend/app/domain/: models.py  schemas.py
backend/app/repositories/: postgres_repo.py
backend/app/services/messages_processor/: constants.py  keyboards.py  message_service.py
backend/scripts/: unicorn.sh
bot/: .env.example  Dockerfile  api_methods.py  config.py  constants.py  keyboards_builder.py  main.py  pyproject.toml
bot/docker/: Dockerfile
