[tool.poetry]
name="startup-core"
version="1.0.0"
description="Core logic for startup bot"
authors=[]

[tool.poetry.dependencies]
python="^3.12"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
aiogram = "^3.20.0.post0"


[tool.isort]
line_length = 120
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
force_grid_wrap = 2
combine_as_imports = true
use_parentheses = true

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "SIM",
    "W",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
